name:                hslogger-graylog
version:             0.0.0.0
synopsis:            Graylog appender for the hslogger logging framework
description:         Please see README.md
homepage:            https://github.com/stefan42/hslogger-graylog#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Schmidt
maintainer:          stefanschmidt42@googlemail.com
copyright:           Copyright (c) 2017 Stefan Schmidt
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Log.Handler.Graylog
  ghc-options:         -Wall -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , hslogger >= 1.2 && < 1.3
                     , graylog >= 0.1 && < 0.2
                     , text
                     , hostname
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stefan42/hslogger-graylog
